--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.4.1",
     "axios": "^0.18.0",
+    "body-parser": "^1.19.0",
     "cross-env": "^5.2.0",
+    "express": "^4.16.4",
     "js-cookie": "^2.2.0",
     "nuxt": "^2.4.0"
   },
